--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,13 +8,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("bootstrap.js")" type="text/javascript"></script>
     </head>
     <body>
+    <div class="container clearfix">
+    <div class="main-col col-lg-10 clearfix col-lg-offset-1 col-md-12 col-sm-12">
         @content
+    </div>
+    </div>
     </body>
 </html>
