--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
     <div class="jumbotron">
     <center>
     <h1>@message</h1>
-        <img src="@routes.Assets.at("images/cat.png")" alt="Show me cats" title="Cats" width="256" height="256"/>
-        <img src="@routes.Assets.at("images/dog.png")" alt="Show me dogs" title="Dogs" width="256" height="256"/>
+        <a href="@routes.Application.search("C")"><img src="@routes.Assets.at("images/cat.png")" alt="Show me cats" title="Cats" width="256" height="256"/></a>
+        <a href="@routes.Application.search("D")"><img src="@routes.Assets.at("images/dog.png")" alt="Show me dogs" title="Dogs" width="256" height="256"/></a>
     </center></div>
 }
