Add better defaults

--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -4,4 +4,5 @@
   <img src="@routes.Assets.at("uploads/images/" + pet.image)" style="width: 60%; position: relative; margin: 10px 20%;"/><br/>
   <h1>@pet.name</h1>
   <p>@pet.profile</p>
+  <p>Feed this @pet.species.name for a day: &ltPAYPAL BUTTON HERE&gt;</p>
 }
