Add some flash stuff, and make cookie handling better

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit flash : Flash)
 
 <!DOCTYPE html>
 
@@ -17,6 +17,9 @@
     <body>
     <div class="container clearfix">
     <div class="main-col col-lg-10 clearfix col-lg-offset-1 col-md-12 col-sm-12">
+        @if(flash.get("error")) {<div class="error">@flash.get("error")</div>}
+        @if(flash.get("success")) {<div class="success">@flash.get("success")</div>}
+        
         @content
     </div>
     </div>
