Paypal button integration + some profile shenanigans

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -2,8 +2,21 @@
 
 @main("DO YOU LIEK PUPPIES!?") {
   <img src="@routes.Assets.at(pet.image)" style="width: 100%; position: relative;"/><br/>
-  <div class="row">
-    <div class="span6" style="float:left; text-align: center; margin: auto;"><a href="@routes.Application.vote(pet.id, "N")"><img src="@routes.Assets.at("images/cross.png")"></a></div>
-    <div class="span6" style="float:right; text-align: center; margin: auto;"><a href="@routes.Application.vote(pet.id, "Y")"><img src="@routes.Assets.at("images/tick.png")"></a></div>
+  <div class="row-fluid">
+    <div class="main-col col-lg-4 clearfix col-md-4 col-sm-4 col-xs-4" style="text-align: center;">
+      <a href="@routes.Application.vote(pet.id, "N")">
+        <img src="@routes.Assets.at("images/cross.png")">
+      </a>
+    </div>
+    <div class="main-col col-lg-4 clearfix col-md-4 col-sm-4 col-xs-4" style="text-align: center;">
+      <a href="@routes.Application.profile(pet.id)" />
+        Profile
+      </a>
+    </div>
+    <div class="main-col col-lg-4 clearfix col-md-4 col-sm-4 col-xs-4" style="text-align: center;">
+      <a href="@routes.Application.vote(pet.id, "Y")">
+        <img src="@routes.Assets.at("images/tick.png")" />
+      </a>
+    </div>
   </div>
 }
