--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -4,5 +4,17 @@
   <img src="@routes.Assets.at(pet.image)" style="width: 60%; position: relative; margin: 10px 20%;"/><br/>
   <h1>@pet.name</h1>
   <p>@pet.profile</p>
-  <p>Feed this @pet.species.name for a day: &ltPAYPAL BUTTON HERE&gt;</p>
+  <p>Feed this @pet.species.name for a day: 
+  <script src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=dave@@caffeinateddave.com"
+    data-button="donate"
+    data-name="Feed @pet.name for a week"
+    data-quantity="1"
+    data-amount="10.00" 
+    data-currency="GBP"
+    data-shipping="0"
+    data-tax="0"
+    data-callback="@routes.Application.profile(pet.id)"
+    data-env="sandbox"
+    async="async"></script>
+  </p>
 }
