Add matches page and don't show pets we've already matched against

--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -4,12 +4,12 @@
   <img src="@routes.Assets.at(pet.image)" style="width: 60%; position: relative; margin: 10px 20%;"/><br/>
   <h1>@pet.name</h1>
   <p>@pet.profile</p>
-  <p>Feed this @pet.species.name for a day: 
+  <p>Feed this @pet.species.name for a week: 
   <script src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=dave@@caffeinateddave.com"
     data-button="donate"
     data-name="Feed @pet.name for a week"
     data-quantity="1"
-    data-amount="10.00" 
+    data-amount="10.00"
     data-currency="GBP"
     data-shipping="0"
     data-tax="0"
