--- a/app/views/matches.scala.html
+++ b/app/views/matches.scala.html
@@ -1,5 +1,15 @@
 @(matches: List[Pet])(implicit flash : Flash)
 
-@main("woo?") {
-  <p> I don't even know what to expect....</p>
+@main("PICK A PUPPIE!") {
+  @for((pet, i) <- matches.zipWithIndex) {
+    @if(i % 3 == 0) {
+      <div class="row">
+    }
+        <div class="main-col col-lg-4 clearfix col-md-4 col-sm-4 col-xs-4" style="text-align: center;">
+          <a href="@routes.Application.profile(pet.id)">@pet.name!</a>
+        </div>
+    @if(i % 3 == 2) {
+      </div>
+    }
+  }
 }
