--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -1,7 +1,7 @@
 @(pet: Pet)(implicit flash : Flash)
 
 @main("YOU LIEKED THIS PUPPIE!") {
-  <img src="@routes.Assets.at(pet.image)" style="width: 60%; position: relative; margin: 10px 20%;"/><br/>
+  <img src="@pet.image" style="width: 60%; position: relative; margin: 10px 20%;"/><br/>
   <h1>@pet.name</h1>
   <p>@pet.profile</p>
   <p>Feed this @pet.species.name for a week: 
