I'm too tired to carry on with this.... checking in for nap time

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)(implicit flash : Flash)
 
-@main("Welcome to Play 2.1") {
+@main("Adoptr") {
     <div class="jumbotron">
       <h1 style="margin: 0; width: 100%; text-align: center;">@message</h1>
       <div class="row-fluid show-grid">
