--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -3,18 +3,24 @@
 @main("YOU LIEKED THIS PUPPIE!") {
   <img src="@pet.image" style="width: 60%; position: relative; margin: 10px 20%;"/><br/>
   <h1>@pet.name</h1>
+  <p>Age: @pet.age</p>
   <p>@pet.profile</p>
-  <p>Feed this @pet.species.name for a week: 
-  <script src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=dave@@caffeinateddave.com"
-    data-button="donate"
-    data-name="Feed @pet.name for a week"
-    data-quantity="1"
-    data-amount="10.00"
-    data-currency="GBP"
-    data-shipping="0"
-    data-tax="0"
-    data-callback="@routes.Application.profile(pet.id)"
-    data-env="sandbox"
-    async="async"></script>
-  </p>
+  @if(pet.status == "S") {
+    @pet.name has already been adopted!
+  } else {
+    <p onclick="alert('I\'ll be a lightbox eventually...');">Adopt @pet.name!</p>
+    <p>Can't adopt? Why not feed @pet.name for a week instead? 
+    <script src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=dave@@caffeinateddave.com"
+      data-button="donate"
+      data-name="Feed @pet.name for a week"
+      data-quantity="1"
+      data-amount="10.00"
+      data-currency="GBP"
+      data-shipping="0"
+      data-tax="0"
+      data-callback="@routes.Application.profile(pet.id)"
+      data-env="sandbox"
+      async="async"></script>
+    </p>
+  }
 }
