--- a/app/views/matches.scala.html
+++ b/app/views/matches.scala.html
@@ -6,10 +6,16 @@
       <div class="row">
     }
         <div class="main-col col-lg-4 clearfix col-md-4 col-sm-4 col-xs-4" style="text-align: center;">
-          <a href="@routes.Application.profile(pet.id)">@pet.name!</a>
+          <a href="@routes.Application.profile(pet.id)">
+            <img src="@pet.image" alt="@pet.name" style="width: 100%;"/><br/>
+            @pet.name
+          </a>
         </div>
     @if(i % 3 == 2) {
       </div>
     }
   }
+  <div style="width: 100%; text-align: center; clear:both;">
+    <a href="@routes.Application.search("X")">Start Again</a>
+  </div>
 }
