--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,7 +17,7 @@
     </head>
     <body>
     <div class="container clearfix">
-    <div class="main-col col-lg-10 clearfix col-lg-offset-1 col-md-12 col-sm-12">
+    <div class="main-col col-lg-10 clearfix col-lg-offset-1 col-md-12 col-sm-12 col-xs-12">
         @if(flash.get("error")) {<div class="error">@flash.get("error")</div>}
         @if(flash.get("success")) {<div class="success">@flash.get("success")</div>}
         
