--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -18,6 +18,7 @@
     </div>
   </div>
   <div style="text-align: center; clear:both;">
+    <h2>@pet.name</h2>
     <a href="@routes.Application.profile(pet.id)" />Profile</a><br/>
     <a href="@routes.Application.review" />Review Matches</a><br/>
     <a href="@routes.Application.search("X")" />Restart</a>
