--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @main("Adoptr") {
     <div class="jumbotron">
-      <h1 style="margin: 0; width: 100%; text-align: center;">Are you interested in Cats or Dogs?</h1>
+      <h2 style="margin: 2px; width: 100%; text-align: center;">Would you like to adopt a Cat or a Dog?</h1>
       <div class="row-fluid show-grid">
         <div class="main-col col-lg-6 clearfix col-md-6 col-sm-6 col-xs-6">
           <a href="@routes.Application.search("C")">
