--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,10 +16,11 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-lightbox.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/slick.css")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap-lightbox.min.js")" type="text/javascript"></script>
-        <script src="http://hammerjs.github.io/dist/hammer.min.js" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/slick.js")" type="text/javascript"></script>
     </head>
     <body>
     <div class="container clearfix">
