--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -9,16 +9,19 @@
       donations to come in to the shelters themselves.</p> 
       <a href="@routes.Application.index">Check it out</a>
       <h3> How </h3>
-      <p>Scala, Play, Heroku, Python, Amazon Webservice S3</p>
+      <p>PayPal, Scala, Play, Heroku, Python, Bootstrap, jQuery, Amazon Webservice S3</p>
       <h3> Attribution </h3>
       <p>Thanks to the following for making their stuff available for free:</p>
       <p>Icons:<br/> 
-      <a href="https://www.iconfinder.com/iconka" target="_new">Denis Sazhin</a><br/>
+      <a href="https://www.iconfinder.com/iconka" target="_new">Denis Sazhin</a> / 
       <a href="https://www.iconfinder.com/iconsets/49handdrawing">Aleksandra Wolska </a></p>
       <p>Code:<br/>
-      <a href="https://typesafe.com/">Typesafe</a><br/>
-      <a href="https://www.heroku.com/">Heroku</a><br/>
-      <a href="http://aws.amazon.com/s3/">Amazon S3</a><br/>
+      <a href="https://developer.paypal.com/">PayPal</a> / 
+      <a href="https://typesafe.com/">Typesafe</a> / 
+      <a href="https://www.heroku.com/">Heroku</a> / 
+      <a href="http://getbootstrap.com/">Bootstrap</a> / <br/>
+      <a href="http://jquery.com/">jQuery</a> /  
+      <a href="http://aws.amazon.com/s3/">Amazon S3</a> / 
       <a href="http://scrapy.org/">Scrapy</a><br/>
     </div>
   </div>
